--- a/app/views/workandbenefits/AboutYourWorkView.scala.html
+++ b/app/views/workandbenefits/AboutYourWorkView.scala.html
@@ -14,6 +14,10 @@
  * limitations under the License.
  *@
 
+@import components._
+@import viewmodels.LegendSize
+
+
 @import models.workandbenefits.AboutYourWork
 
 @this(
@@ -21,7 +25,9 @@
     formHelper: FormWithCSRF,
     govukErrorSummary: GovukErrorSummary,
     govukCheckboxes: GovukCheckboxes,
-    govukButton: GovukButton
+    govukButton: GovukButton,
+    govukDetails: GovukDetails,
+    heading: Heading1
 )
 
 @(form: Form[_], mode: Mode, taxYear: Int)(implicit request: Request[_], messages: Messages)
@@ -34,14 +40,16 @@
             @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "AboutYourWork")))
         }
 
+        @heading(messages("aboutYourWork.title"))
+
         @govukCheckboxes(
             CheckboxesViewModel(
                 form     = form,
                 idPrefix = "AboutYourWork",
                 name     = "value[]",
-                legend   = LegendViewModel(messages("aboutYourWork.heading")).asPageHeading(),
+                legend   = LegendViewModel(messages("aboutYourWork.heading")).visuallyHidden(),
                 items    = AboutYourWork.checkboxItems
-            )
+            ).withHint(Hint(content = Text(messages(s"site.hint.selectAll"))))
         )
 
         @govukButton(
