--- a/app/views/propertypensionsinvestments/UkInsuranceGainsAgentView.scala.html
+++ b/app/views/propertypensionsinvestments/UkInsuranceGainsAgentView.scala.html
@@ -55,7 +55,7 @@
             @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "UkInsuranceGains")))
         }
 
-        @heading(messages("ukInsuranceGains.title"))
+        @heading(messages("ukInsuranceGains.agent.title"))
 
         @govukDetails(Details(
             summary = Text(messages("ukInsuranceGains.summary")),
