--- a/app/views/AddSectionsView.scala.html
+++ b/app/views/AddSectionsView.scala.html
@@ -17,14 +17,17 @@
 @import models.Mode
 @import viewmodels.Task
 @import models.TagStatus._
-@import views.html.components.{Link, TaskList}
+@import views.html.components._
 
 @this(
         layout: templates.Layout,
         govukButton: GovukButton,
         govukTag: GovukTag,
         link: Link,
-        taskList: TaskList
+        taskList: TaskList,
+        heading: Heading1,
+        heading2: Heading2,
+        p: ParagraphBody
 )
 
 @(taxYear: Int, sections: List[Task], completedSections: Int)(implicit request: Request[_], messages: Messages)
@@ -33,11 +36,11 @@
 
         <span class="govuk-caption-l">@messages("site.taxYearCaption", (taxYear -1).toString, taxYear.toString)</span>
 
-        <h1 class="govuk-heading-l">@messages("addSections.heading")</h1>
+        @heading(messages("addSections.heading"))
 
-        <h2 class="govuk-heading-s">@messages("addSections.incomplete")</h2>
+        @heading2(messages("addSections.incomplete"))
 
-        <p class="govuk-body govuk-!-margin-bottom-7">@messages("addSections.completedSections", completedSections)</p>
+        @p(messages("addSections.completedSections", completedSections), extraClasses = Seq("govuk-!-margin-bottom-7"))
 
         @taskList(sections)
 
