SASS-5727 J-3 Create Income from pensions page

--- a/app/views/propertypensionsinvestments/PensionsView.scala.html
+++ b/app/views/propertypensionsinvestments/PensionsView.scala.html
@@ -41,12 +41,12 @@
         Html(messages("pensions.details.understandingIncomeFromPensions.bullet2")),
         Html(messages("pensions.details.understandingIncomeFromPensions.bullet3")),
         Html(messages("pensions.details.understandingIncomeFromPensions.bullet4"))
-    ), classes="govuk-!-padding-left-7")
+    ))
 }
 
 @insetContent2 = {
     @paragraph(messages("pensions.details.understandingUnauthorisedPayments.p1"))
-    <ul class="govuk-list govuk-list--bullet govuk-!-padding-left-7">
+    <ul class="govuk-list govuk-list--bullet">
         <li>@messages("pensions.details.understandingUnauthorisedPayments.bullet1")</li>
         <li>@messages("pensions.details.understandingUnauthorisedPayments.bullet2")</li>
         <li>@messages("pensions.details.understandingUnauthorisedPayments.bullet3")</li>
