--- a/app/views/propertypensionsinvestments/PensionsAgentView.scala.html
+++ b/app/views/propertypensionsinvestments/PensionsAgentView.scala.html
@@ -41,13 +41,13 @@
         Html(messages("pensions.details.understandingIncomeFromPensions.bullet2")),
         Html(messages("pensions.details.understandingIncomeFromPensions.bullet3")),
         Html(messages("pensions.details.understandingIncomeFromPensions.bullet4"))
-    ), classes="govuk-!-padding-left-7")
+    ))
 }
 
 @insetContent2 = {
     @paragraph(messages("pensions.details.understandingUnauthorisedPayments.p1"))
     <ul class="govuk-list govuk-list--bullet">
-        <li>@messages("pensions.details.understandingUnauthorisedPayments.bullet1")</li>
+        <li>@messages("pensions.agent.details.understandingUnauthorisedPayments.bullet1")</li>
         <li>@messages("pensions.details.understandingUnauthorisedPayments.bullet2")</li>
         <li>@messages("pensions.agent.details.understandingUnauthorisedPayments.bullet3")</li>
         <li>@messages("pensions.details.understandingUnauthorisedPayments.bullet4")</li>
