--- a/app/views/propertypensionsinvestments/UkDividendsSharesAndLoansFromLimitedCompaniesAgentView.scala.html
+++ b/app/views/propertypensionsinvestments/UkDividendsSharesAndLoansFromLimitedCompaniesAgentView.scala.html
@@ -39,7 +39,12 @@
 
 @insetContent1 = {
     <p class="govuk-body">@messages("ukDividendsSharesAndLoansFromLimitedCompanies.detail.understandingDividends.p1")
-        @link("taxOnDividends", messages("ukDividendsSharesAndLoansFromLimitedCompanies.detail.taxOnDividends.linkText"), taxOnDividends, true)
+        @link(
+            "taxOnDividends",
+            messages("ukDividendsSharesAndLoansFromLimitedCompanies.detail.taxOnDividends.linkText"),
+            taxOnDividends,
+            true
+        )
     </p>
 }
 
@@ -48,7 +53,12 @@
     @paragraph(messages("ukDividendsSharesAndLoansFromLimitedCompanies.detail.understandingDividendsUnitTrustsInvestmentCompanies.p2"))
     @paragraph(messages("ukDividendsSharesAndLoansFromLimitedCompanies.detail.understandingDividendsUnitTrustsInvestmentCompanies.p3"))
     <p class="govuk-body">
-        @link("authorisedInvestmentFunds", messages("ukDividendsSharesAndLoansFromLimitedCompanies.detail.understandingDividendsUnitTrustsInvestmentCompanies.p4.linkText"), authorisedInvestmentFunds, true)
+        @link(
+            "authorisedInvestmentFunds",
+            messages("ukDividendsSharesAndLoansFromLimitedCompanies.detail.understandingDividendsUnitTrustsInvestmentCompanies.p4.linkText"),
+            authorisedInvestmentFunds,
+            true
+        )
     </p>
 }
 
@@ -107,7 +117,7 @@
                 name     = "value[]",
                 legend   = LegendViewModel(messages("ukDividendsSharesAndLoansFromLimitedCompanies.agent.legend")).withSize(LegendSize.Medium),
                 items    = UkDividendsSharesAndLoansFromLimitedCompanies.agentCheckboxItems
-            ).withHint(Hint(content = Text(messages(s"site.hint.selectAll"))))
+            ).withHint(Hint(content = Text(messages("site.hint.selectAll"))))
         )
 
         @govukButton(
