--- a/app/views/propertypensionsinvestments/UkDividendsSharesAndLoansFromLimitedCompaniesView.scala.html
+++ b/app/views/propertypensionsinvestments/UkDividendsSharesAndLoansFromLimitedCompaniesView.scala.html
@@ -108,7 +108,7 @@
                 name     = "value[]",
                 legend   = LegendViewModel(messages("ukDividendsSharesAndLoansFromLimitedCompanies.legend")).withSize(LegendSize.Medium),
                 items    = UkDividendsSharesAndLoansFromLimitedCompanies.checkboxItems
-            ).withHint(Hint(content = Text(messages(s"site.hint.selectAll"))))
+            ).withHint(Hint(content = Text(messages("site.hint.selectAll"))))
         )
 
         @govukButton(
