SASS - 6104 - Content 'About your work' and 'What did you do for work' page (#61)
* adding content for about your work page, checkboxes only

* scaffold and content added for the about you radio button page

* SASS-6104: Add logic for about your work page

* SASS-6104: Update dependencies

* SASS-6104: Update error messages

* SASS-6104: Refactoring after group review

* SASS-6104: Refactor add sections service

* SASS-6104: Update plugin

---------

Co-authored-by: ghousedev <49005870+ghousedev@users.noreply.github.com>

--- a/app/views/workandbenefits/AboutYourWorkRadioPageAgentView.scala.html
+++ b/app/views/workandbenefits/AboutYourWorkRadioPageAgentView.scala.html
@@ -17,35 +17,41 @@
 @import components._
 @import viewmodels.LegendSize
 
-@import models.workandbenefits.AboutYourWork
-
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
     govukErrorSummary: GovukErrorSummary,
-    govukCheckboxes: GovukCheckboxes,
+    govukRadios: GovukRadios,
     govukButton: GovukButton,
-    govukDetails: GovukDetails
+    heading: Heading1,
+    list: BulletList,
+    paragraph: ParagraphBody
 )
 
 @(form: Form[_], mode: Mode, taxYear: Int)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("aboutYourWork.agent.title")), taxYear = taxYear) {
+@layout(pageTitle = title(form, messages("aboutYourWorkRadioPage.agent.title")), taxYear = taxYear) {
 
     @formHelper(action = controllers.workandbenefits.routes.AboutYourWorkController.onSubmit(mode, taxYear), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
-            @govukErrorSummary(ErrorSummaryViewModel(form, errorLinkOverrides = Map("value" -> "AboutYourWork")))
+            @govukErrorSummary(ErrorSummaryViewModel(form))
         }
 
-        @govukCheckboxes(
-            CheckboxesViewModel(
-                form     = form,
-                idPrefix = "AboutYourWork",
-                name     = "value[]",
-                legend   = LegendViewModel(messages("aboutYourWork.agent.heading")).asPageHeading(LegendSize.Large),
-                items    = AboutYourWork.agentCheckboxItems
-            ).withHint(Hint(content = Text(messages(s"site.hint.selectAll"))))
+        @heading(messages("aboutYourWorkRadioPage.agent.title"))
+
+        <div class="govuk-inset-text">
+            @paragraph(messages("aboutYourWorkRadioPage.agent.p1"))
+            @list(Seq(
+                Html(messages("aboutYourWorkRadioPage.bullet1"))
+            ))
+        </div>
+
+        @govukRadios(
+            RadiosViewModel.yesNo(
+                field = form("value"),
+                legend = LegendViewModel(messages("aboutYourWorkRadioPage.agent.heading")).withSize(LegendSize.Medium)
+            )
         )
 
         @govukButton(
